<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.bot.creation.SellBuyConditionsFragment">

    <LinearLayout
        android:id="@+id/layout_sell_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell_conditions_headline"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell_conditions_subtitle_drop" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sellDropPerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_percentages_text"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sell_conditions_subtitle_increase" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sellIncreasePerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_percentages_text"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_sell_conditions">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_conditions_headline"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_conditions_subtitle_drop" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buyDropPerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_percentages_text"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>